--- a/receipe-post.html
+++ b/receipe-post.html
@@ -162,7 +162,14 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading">
-                        <h3>Receipe Menu</h3>
+                        <h3>Receipe Menu Special</h3>
+                        <div class="ratings">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>   
+                </div>
                     </div>
                 </div>
             </div>
