--- a/about.html
+++ b/about.html
@@ -345,7 +345,7 @@
                     </div>
                     <!-- Copywrite -->
                     <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> By : Erick:) Rafly:) Salma:) and Wisnu:) 
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                 </div>
             </div>
